--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
+    "vue3-modal": "^0.1.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
